[gd_scene load_steps=5 format=3 uid="uid://vnti167jfkbk"]

[ext_resource type="Script" path="res://uis/main_menu_ui.gd" id="1_lnu8j"]
[ext_resource type="Script" path="res://src/backend_client.gd" id="2_hq0wr"]
[ext_resource type="PackedScene" uid="uid://cso4cxc4m4sqm" path="res://uis/create_task_ui.tscn" id="3_q124q"]
[ext_resource type="PackedScene" uid="uid://crg87xbkgg4ry" path="res://uis/edit_task_ui.tscn" id="4_5pgg3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lnu8j")

[node name="BackendClient" type="HTTPRequest" parent="."]
script = ExtResource("2_hq0wr")

[node name="AllTasksList" type="ItemList" parent="."]
visible = false
custom_minimum_size = Vector2(0, 1000)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
item_count = 2
item_0/text = "Hello"
item_1/text = "World"

[node name="GetRandomTaskButton" type="Button" parent="."]
custom_minimum_size = Vector2(175, 150)
layout_mode = 2
offset_left = 142.0
offset_top = 54.0
offset_right = 317.0
offset_bottom = 204.0
text = "Random"

[node name="CreateTaskButton" type="Button" parent="."]
custom_minimum_size = Vector2(175, 150)
layout_mode = 2
offset_left = 420.0
offset_top = 51.0
offset_right = 595.0
offset_bottom = 201.0
text = "Create"

[node name="CreateTaskUi" parent="." instance=ExtResource("3_q124q")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 51.0
offset_top = 215.0
offset_right = 651.0
offset_bottom = 915.0
grow_horizontal = 1
grow_vertical = 1

[node name="EditTaskUi" parent="." instance=ExtResource("4_5pgg3")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 69.0
offset_top = 200.0
offset_right = 669.0
offset_bottom = 900.0
grow_horizontal = 1
grow_vertical = 1

[node name="UserLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Hello __"

[node name="SignOutButton" type="Button" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 10.0
offset_right = 717.0
offset_bottom = 50.0
text = "Sign Out"

[connection signal="item_selected" from="AllTasksList" to="." method="_on_all_tasks_list_item_selected"]
[connection signal="pressed" from="GetRandomTaskButton" to="." method="_on_get_random_task_button_pressed"]
[connection signal="pressed" from="CreateTaskButton" to="." method="_on_create_task_button_pressed"]
[connection signal="create_task_ui_closed" from="CreateTaskUi" to="." method="_on_create_task_ui_create_task_ui_closed"]
[connection signal="task_created" from="CreateTaskUi" to="." method="_on_create_task_ui_task_created"]
[connection signal="edit_task_ui_closed" from="EditTaskUi" to="." method="_on_edit_task_ui_edit_task_ui_closed"]
[connection signal="task_completed" from="EditTaskUi" to="." method="_on_task_ui_task_completed"]
[connection signal="task_edited" from="EditTaskUi" to="." method="_on_task_ui_task_edited"]
[connection signal="pressed" from="SignOutButton" to="." method="_on_sign_out_button_pressed"]
